# MacawTranscribe

./: .env.example  .gitignore  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml
MacawTranscribe/: asgi.py  logging_utils.py  settings.py  urls.py  wsgi.py
MacawTranslate/: asgi.py  settings.py  urls.py  wsgi.py
assets/css/: app.css  fonts.css  tokens.css
data/recordings/: README.md
ml/: manager.py  registry.py  tests.py  types.py
ml/backends/: base.py  mlx_whisper_backend.py
pipelines/: apps.py  chunk_heartbeat.py  events.py  queue.py  queue_names.py  queue_types.py  runtime.py  services.py  supervisor.py  tests.py  urls.py  views.py  worker.py  workspace_supervisor.py  workspace_worker.py
recordings/: admin.py  audio.py  files.py  models.py  services.py  tests.py  urls.py  views.py
recordings/migrations/: 0001_initial.py  0002_alter_recording_normalized_file_path_and_more.py  0003_alter_recording_status.py
speakers/: admin.py  audio.py  models.py  services.py  tests.py  urls.py  views.py
speakers/migrations/: 0001_initial.py  0002_rename_recording_id_silencesegment_recording_and_more.py
templates/: base.html
templates/components/: _flash_messages.html  _topbar.html
templates/layouts/: app_shell.html
transcriptions/: admin.py  assembly.py  models.py  runtime.py  services.py  services_runtime.py  tests.py  urls.py  views.py
transcriptions/migrations/: 0001_initial.py
user_settings/: admin.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
user_settings/migrations/: 0001_initial.py  (+4 more)
(+23 files in other folders)
