[project]
name = "macawtranscribe"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-environ>=0.13.0",
    "mlx-whisper>=0.4.3",
    "psycopg[binary]>=3.3.3",
    "pyannote-audio>=4.0.4",
    "redis>=7.3.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
]
